# Horizon-File-Manager

./: .gitignore  .gitmodules  Files.Changelog.md  README.md  files.md  justfile  meson.build  phase10.md
Docs/: Arch-Linux.md  Debian-Ubuntu.md  Fedora.md
build-release/src/archive_viewer/: horizon-archive
protocol/: dwl-ipc-unstable-v2-client-protocol.h  hyprland-toplevel-mapping-v1-client-protocol.h  virtual-keyboard-unstable-v1-client-protocol.h  wlr-layer-shell-unstable-v1-client-protocol.h
src/app/file_browser/: app.cpp  app.hpp  app_types.hpp  standalone_main.cpp
src/app/file_browser/embed/: embed.cpp  embed.hpp
src/app/file_browser/features/: compress.cpp  compress.hpp  desktop_icon_parser.cpp  desktop_icon_parser.hpp  drag.cpp  drag.hpp  epub_preview.cpp  image_preview.cpp  menu.cpp  nav.cpp  pdf_preview.cpp  progress.cpp  recursive_search_worker.cpp  recursive_search_worker.hpp  svg_preview.cpp  terminal.cpp  thumbnail_cache.cpp  video_preview.cpp  video_worker.cpp  video_worker.hpp
src/app/file_browser/input/: events.cpp
src/app/file_browser/ui/: computer_view.cpp  draw.cpp  rename_ui.cpp
src/archive_viewer/: horizon-archive.desktop  main.cpp  meson.build
src/archive_viewer/core/: archive.cpp  archive.hpp  thread_pool.hpp
src/archive_viewer/fb/: fb_icons.cpp  fb_icons.hpp  fb_panel.cpp  fb_panel.hpp
src/archive_viewer/ui/: gui.cpp  state.hpp
src/backends/interfaces/: compositor_ipc.cpp  compositor_ipc.h  kbd_interface.h  power_actions.cpp  power_actions.h  workspace_manager.h
src/base/thread/: thread_dispatch.cpp  thread_dispatch.hpp  thread_pool.cpp
src/bootstrap/thread/: thread_dispatch.cpp  thread_pool.cpp  thread_pool.hpp
src/config/: shell_config.cpp  shell_config.hpp  shell_renderer_backend.hpp
src/configuration/: shell_config.cpp  shell_config.hpp
src/desktop_shell/common/asset/: asset_loader.cpp
src/desktop_shell/common/bench/: bench_file.hpp  bench_trace.hpp  debug_profile.hpp  memory_usage.hpp  shell_bench.hpp  startup_trace.hpp
src/desktop_shell/common/fs/: file_util.hpp  shell_file_util.hpp  shell_paths.cpp  shell_paths.hpp  string_util.cpp  string_util.hpp
src/desktop_shell/common/glyph/: bundled_assets.cpp  bundled_assets.hpp  bundled_fonts.cpp  bundled_fonts.hpp  material_glyph.cpp  material_glyph.hpp
src/desktop_shell/common/icon_cache/: icon_cache.cpp
src/desktop_shell/common/log/: mangowm_logger.hpp  verbose_log.hpp
src/desktop_shell/common/monitor/: output_assign.hpp
src/desktop_shell/common/palette/: hyprland_border_matugen.hpp  matugen_external_templates.hpp  matugen_palette.cpp
src/desktop_shell/desktop/entries/: desktop_archive.cpp  desktop_archive.hpp  desktop_entries.cpp  desktop_entries.hpp  desktop_entry_types.hpp  desktop_open_with.cpp  desktop_open_with.hpp  desktop_xdg_ops.cpp  desktop_xdg_ops.hpp
src/desktop_shell/spotlight/search/: spotlight_query.cpp  spotlight_query.hpp  spotlight_search.cpp  spotlight_search.hpp
src/dialog/: dialog_base.cpp  dialog_base.hpp  file_chooser_dialog.cpp  file_chooser_dialog.hpp
src/m3/controls/containers/: button.hpp  card.hpp  fab.hpp
src/m3/controls/input/: checkbox.hpp  chip.hpp  date_picker.hpp  input.hpp  radio_button.hpp  select.hpp  slider.hpp  time_picker.hpp  toggle.hpp
src/m3/controls/navigation/: bottom_app_bar.hpp  nav_bar.hpp  nav_drawer.hpp  nav_rail.hpp  search_bar.hpp  tabs.hpp  top_app_bar.hpp
src/m3/core/: animation.hpp  focus_ring.hpp  label.hpp
src/m3/core/primitives/: separator.hpp  state_layer.hpp
src/m3/tokens/: elevation.hpp  shape.hpp  type_scale.hpp
src/platform/common/asset/: asset_loader.cpp  asset_loader.hpp
src/platform/common/bench/: bench_file.hpp  bench_trace.hpp  memory_usage.hpp  startup_trace.hpp
src/platform/common/fs/: shell_paths.cpp  string_util.cpp
src/platform/common/glyph/: bundled_assets.cpp  material_glyph.cpp
src/platform/common/icon_cache/: icon_cache.cpp  icon_cache.hpp
src/platform/common/log/: debug_log.hpp  shell_diag_log.hpp
src/platform/common/ns/: namespaces.hpp
src/platform/common/palette/: color_hsv.hpp  matugen_palette.cpp  matugen_palette.hpp
src/platform/desktop/entries/: desktop_xdg_ops.cpp  desktop_xdg_ops.hpp
src/platform/dock/core/: dock_settings.hpp
src/platform/spotlight/search/: spotlight_search.hpp
src/platform/taskbar/core/: taskbar_settings.hpp
src/services/udisks2/: udisks2_drive_service.cpp  udisks2_drive_service.hpp
src/theme/controls/containers/: button.hpp  card.hpp  fab.hpp
src/theme/controls/input/: checkbox.hpp  (+8 more)
src/theme/core/: animation.hpp  context.hpp  focus_ring.hpp  glyph.hpp  label.hpp
src/theme/tokens/: color.hpp  motion.hpp  spacing.hpp
src/ux/file_browser/: app.cpp  app.hpp  app_types.hpp  standalone_main.cpp
src/wallpaper/thumbnail/: wallpaper_thumbnail.cpp  wallpaper_thumbnail.hpp  wallpaper_thumbnail_service.cpp  wallpaper_thumbnail_service.hpp
src/wayland/buffer/: cairo_cpu_buffer.cpp  cairo_cpu_buffer.hpp  shm_buffer.cpp  shm_buffer_pool.hpp  single_pixel_buffer.cpp  single_pixel_buffer.hpp
src/wayland/core/: connection.cpp  connection.hpp  memfd.cpp  memfd.hpp  seat.cpp  seat.hpp
src/wayland/input/: clipboard.cpp  clipboard.hpp
src/wayland/surface/: layer_surface.hpp  surface_extensions.cpp  surface_extensions.hpp  tearing_control.cpp  tearing_control.hpp
src/wayland/toplevel/: ext_foreign_toplevels.hpp  workspaces.h
src/wl/buffer/: cairo_cpu_buffer.cpp  shm_buffer.cpp  shm_buffer.hpp  single_pixel_buffer.cpp  single_pixel_buffer.hpp
src/wl/core/: connection.cpp  connection.hpp  memfd.cpp  protocols.hpp  seat.cpp
src/wl/input/: clipboard.cpp  clipboard.hpp  keyboard_shortcuts_inhibit.cpp  keyboard_shortcuts_inhibit.hpp  pointer_constraints.cpp  pointer_constraints.hpp  virtual_keyboard.cpp  virtual_keyboard.hpp
src/wl/surface/: layer_surface.hpp  overlay_premul.hpp  surface_extensions.cpp  surface_extensions.hpp  tearing_control.cpp  tearing_control.hpp  vulkan_destruction_queue.cpp  vulkan_destruction_queue.hpp  vulkan_wayland.cpp  vulkan_wayland.hpp
src/wl/toplevel/: ext_foreign_toplevels.hpp
(+47 files in other folders)
